# MILETO_enhancingFAIRness

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  README.md  cli.py  gui.py  mise.toml  pyproject.toml
docs/: landscape.md
docs/adr/: 001-adr-process.md  002-project-positioning.md  003-web-mode-architecture.md  004-web-v1-scope-and-erd-rendering.md  README.md  _template.md
src/: app.py  cli.py  gui_app.py
src/dbcreate/: dbcreate.py  erd_create.py
tests/: test_dbcreate.py  test_entrypoints.py
workstreams/researcher-first-redesign/: AGENTS.md  README.md  decision-001-product-direction.md  experiment-001-onboarding-mvp.md  journey-current.md  journey-future.md
