[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enhancing-fairness"
version = "1.1.0-beta"
description = "Spreadsheet to SQLite converter with metadata and documentation."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "CTkMessagebox==2.7",
  "customtkinter==5.2.2",
  "darkdetect==0.8.0",
  "defusedxml==0.7.1",
  "et-xmlfile==1.1.0",
  "graphviz==0.20.3",
  "numpy==2.1.2",
  "odfpy==1.4.1",
  "openpyxl==3.1.5",
  "packaging==24.1",
  "pandas==2.2.3",
  "parameterized==0.9.0",
  "pdfkit==1.0.0",
  "pillow==10.4.0",
  "python-dateutil==2.9.0.post0",
  "pytz==2024.2",
  "setuptools==65.5.0",
  "six==1.16.0",
  "tzdata==2024.2",
]

[dependency-groups]
dev = [
  "coverage[toml]==7.6.10",
  "mypy==1.14.1",
  "pre-commit==4.0.1",
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "ruff==0.9.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
